listening to global keys

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
   <body>
   	  <div data-app></div>
+  	  <script>
+  	  	  const electron = require('electron');
+  	  </script>
   	  <script src="http://127.0.0.1:3000/build/index.js"></script>
   </body>
 </html>
