--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   	  <div data-app></div>
   	  <script>
   	  	  const electron = require('electron');
+  	  	  const Playmusic = require('playmusic');
   	  </script>
+  	  <link rel="stylesheet" href="static/materialize.css">
+  	  <link rel="stylesheet" href="static/index.css">
   	  <script src="http://127.0.0.1:3000/build/index.js"></script>
   </body>
 </html>
