--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   	  	  const electron = require('electron');
   	  	  const Playmusic = require('playmusic');
   	  </script>
+  	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   	  <link rel="stylesheet" href="static/materialize.css">
   	  <link rel="stylesheet" href="static/index.css">
   	  <script src="http://127.0.0.1:3000/build/index.js"></script>
