--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,16 @@
   	<body>
   	  	<div data-app></div>
   	  	<script>
-  	  	  	const electron = require('electron');
-  	  	  	const Playmusic = require('playmusic');
-			const isProd = require('querystring').parse(window.location.search.slice(1)).isProd === '1';
+  	  	  	const native = {
+			  electron: require('electron'),
+			  fs: require('fs'),
+			  https: require('https'),
+			  path: require('path'),
+			  stream: require('stream'),
+  	  	          Playmusic: require('playmusic')
+  	  	  	};
 			(function () {
+			        const isProd = require('querystring').parse(window.location.search.slice(1)).isProd === '1';
 				const s = document.createElement('script');
 				s.src = isProd ? 'build/index.js' : 'http://127.0.0.1:3000/build/index.js'
 				document.body.appendChild(s);
